Fix card text overflowing bucket

--- a/exp-player/addon/styles/components/exp-card-sort.scss
+++ b/exp-player/addon/styles/components/exp-card-sort.scss
@@ -21,13 +21,19 @@
     font-size: 10px;
 }
 
+.small-bucket {
+    padding-right: 8px;
+    padding-left: 8px;
+}
+
 .small-bucket .well {
-    padding:12px;
+    padding:10px;
 }
 
 .small-bucket .alert {
     padding: 10px;
     margin-bottom: 12px;
+    overflow-wrap: break-word;
 }
 
 .bucket-label-margin {
